css enhancements to home page; created reactive slips, organized some divs, setup some flexbox, etc. added unique slip rendering via button from slip container. z-index added to nav.css due to rendering issues between reactive slips and header.

--- a/src/App.css
+++ b/src/App.css
@@ -2,18 +2,14 @@
 
 .App {
   font-family: "Hanuman", serif;
+  background-color: rgba(158, 114, 76, 0.296);
   font-size: 20px;
   padding-bottom: 15vh;
+  padding-top: 12vh;
 }
 
-#logo-header {
-  height: 100px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
 
-nav,
+/* nav,
 a {
   display: flex;
   flex-direction: row;
@@ -22,9 +18,19 @@ a {
   padding-left: 3vh;
   padding-right: 3vh;
   justify-content: space-between;
+} */
+
+.slips-map {
+  display: grid;
+  grid-template-rows: repeat(4, 2fr);
+  /* grid-auto-columns: auto; */
+  grid-gap: 3rem;
+  /* padding-top: 10vh; */
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
-.slip-form {
+/* .slip-form {
   display: block;
   display: flex;
   flex-direction: column;
@@ -33,31 +39,23 @@ a {
   text-align: center;
   width: 60vh;
   height: 50vh;
-}
+} */
 
-.slip-container {
+/* .slip-container { */
   /* width: 20vw;
   box-sizing:content-box;
   border-radius: 50px;
   background-color: rgb(238, 240, 249);
   display:grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-areas:
-    "H H H H"
-    "I I I I"
-    "I I I I"
-    "I I I I"
-    "F F F F";
-  margin: 0px 0px 0px 0px; */
-}
+/* } */
 
-.slip-image {
+/* .slip-image { */
   /* height: 400px;
   display:block;
   margin-left: auto;
   margin-right: auto; */
   /* object-fit: cover; */
-}
+/* } */
 
 /* .slip-details {
   display: flex;
@@ -65,7 +63,7 @@ a {
   text-align: center;
 } */
 
-.rules {
+/* .rules {
   margin-right: 10vh;
   margin-left: 10vh;
 }
@@ -90,7 +88,7 @@ h1 {
   text-align: center;
   width: 60vh;
   height: 50vh;
-}
+} */
 
 /* select {
   display: flex;
@@ -104,10 +102,10 @@ h1 {
 } */
 
 /* .submit-event, */
-.submit-slip {
+/* .submit-slip {
   color: white;
   background-color: rgb(29, 9, 215);
-}
+} */
 
 /* .about {
   padding-right: 10vh;
@@ -414,5 +412,25 @@ footer {
   .event-details {
     text-align: left;
 
+  } */
+  
+
+
+
+/* 
+  ipad: 
+  .App {
+    font-family: "Hanuman", serif;
+    background-color: rgba(41, 79, 126, 0.111);
+    font-size: 20px;
+    padding-bottom: 15vh;
+  }
+
+
+  .slips-map {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: auto;
+    grid-gap: 5rem;
   } */
   
