--- a/src/components/Slip.css
+++ b/src/components/Slip.css
@@ -1,44 +1,63 @@
 .slip-container {
-  width: 300px;
+  /* width: 50%; */
   overflow: hidden;
-  box-shadow: 0px 0px 15px -5px;
-  transition: 0.5s;
-  animation: ease-in;
-}
-
-.slip-container:hover {
-  transform: scale(1.01);
-  box-shadow: 0px 0px 15px 0px;
-}
-
-.slip-image {
-  overflow: hidden;
-  height: 200px;
+  box-shadow: 0px 0px 20px -3px;
+  transition: 0.3s;
+  animation:ease-in;
+  background-color: #77040422;
 }
 
 .slip-content {
-  margin: 25px;
+  display: flex;
+  flex-direction: column;
+}
+
+.slip-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.slip-container:hover {
+  transform: scale(1.02);
+  box-shadow: 0px 20px 100px 20px;
+}
+
+.slip-image {
+  object-fit: cover;
+  overflow: hidden;
+  width: 600px;
+  height: 400px;
 }
 
 .slip-title {
-  margin-bottom: 15px;
+  
+}
+
+.slip-content {
+  margin: 35px;
+  display: flex;
+  flex-direction: column;
+  justify-content:space-between;
 }
 
 .slip-button {
   display: flex;
-  justify-content: center;
+  justify-content:flex-end;
 }
 
 .slip-button button {
-  padding: 5px;
-  background-color: rgba(21, 55, 141, 0.166);
-  transition: 0.1s;
+  transition: 0.5s;
+  color: rgb(255, 255, 255);
+  font-size:large;
+  background-color: rgb(29, 9, 215)
 }
 
 .slip-button:hover {
-
+  
 }
 
 h5 {
   margin: 3px;
 }
+
+
